# ugt-fwtools

./: CHANGELOG.md  LICENSE  MANIFEST.in  README.md  setup.cfg  tox.ini
.github/workflows/: python-package.yml
tests/: test_utils.py
ugt_fwtools/: archive_project.py  build_report.py  buildreport.py  checksynth.py  compile_simlib.py  fwpacker.py  pkgpatch.py  runsynth.py  simulation.py  synth_1_module.py  synthesis.py  utils.py  vivado_write_bitstream.tcl  xmlmenu.py
