[metadata]
name = ugt-fwtools
version = attr: ugt_fwtools.__version__
author = Bernhard Arnold
author_email = bernhard.arnold@cern.ch
description = Firmware build tools for Phase-1 uGT
long_description = file: README.md
long_description_content_type = text/markdown
license = MIT

[options]
python_requires = >=3.6
packages = find:
install_requires =
    ipbb @ https://github.com/ipbus/ipbb/archive/dev/2023a.tar.gz
test_suite = tests

[options.packages.find]
exclude=tests

[options.entry_points]
console_scripts =
    ugt-checksynth = ugt_fwtools.checksynth:main
    ugt-fwpacker = ugt_fwtools.fwpacker:main
    ugt-buildreport = ugt_fwtools.buildreport:main
    ugt-runsynth = ugt_fwtools.runsynth:main

[mypy]
