[metadata]
name = ugt-fwtools
version = attr: ugt_fwtools.__version__
author = Bernhard Arnold
author_email = bernhard.arnold@cern.ch
description = Firmware build tools for Phase-1 uGT
long_description = file: README.md
long_description_content_type = text/markdown
license = MIT

[options]
python_requires = >=3.6
packages = find:
install_requires =
    ipbb @ https://github.com/ipbus/ipbb/archive/dev/2023a.tar.gz
    lxml==4.9.2
test_suite = tests

[options.packages.find]
exclude=tests

[options.entry_points]
console_scripts =
    ugt-archive = ugt_fwtools.archive_project:main
    ugt-checksynth = ugt_fwtools.checksynth:main
    ugt-fwpacker = ugt_fwtools.fwpacker:main
    ugt-buildreport = ugt_fwtools.build_report:main
    ugt-simulate = ugt_fwtools.simulation:main
    ugt-synthesize = ugt_fwtools.synthesis:main

[mypy]
